# body-recomp-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATABASE_SETUP.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  easypanel.json  performance_test_results.json  performance_test_summary.json  pyproject.toml  tsconfig.json  verify_phase2.py
.codacy/: codacy.yaml
.github/: copilot-instructions.md
.specify/: init-options.json
.specify/memory/: constitution.md
alembic/versions/: 001_create_users.py  20251029_0837_create_training_and_diet_plans_tables.py  20251029_0950_add_performance_indexes.py  20251110_0441_fix_goalstatus_enum.py
backend/: .coveragerc  Dockerfile  alembic.ini  performance_test_results.json  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/scripts/: backup.sh  init.sh  manual_test_us2.sh  performance_test_locust.py  simple_perf_test.sh
backend/tests/: conftest.py
docs/: EASYPANEL_DEPLOY.md
frontend/: .env.example  Dockerfile  README.md  capacitor.config.ts  i18n.ts  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/app/: layout.tsx  providers.tsx
frontend/capacitor/: README.md  package.json
frontend/messages/: de.json  en.json  es.json  pt-BR.json  (+1 more)
mobile/: .eslintignore  .eslintrc.js  .gitignore  README.md  app.json  eas.json  index.ts  package-lock.json  package.json
scripts/: MANUAL_TESTING_REPORT.md  PERFORMANCE_TESTING.md  deploy.sh  init.sh  manual_test.sh  performance_test_k6.js
tests/: conftest.py
(+240 files in other folders)
